# ml-with-haskell

./: .gitignore  README.md  default.nix  flake.nix  hasktorch-skeleton.cabal  ml-with-haskell.cabal  shell.nix
examples/: LinearRegression1.hs  LinearRegression2.hs  frozen-lake-rl.hs  linear-regression-basic.hs  linear-regression-optimizer.hs  snake-rl.hs
lib/: CommonArgs.hs
lib/Control/Monad/State/: Instances.hs
lib/Control/Monad/Tardis/: Instances.hs
lib/RL/: Agent.hs  Environment.hs
lib/RL/Agents/: WASD.hs
lib/RL/Environments/: FrozenLake.hs  Snake.hs
lib/Reflex/: Utils.hs
lib/Stats/: MovingWindowAverage.hs
lib/Torch/Typed/: Extra.hs
ml-with-haskell/: ml-with-haskell.cabal
ml-with-haskell/examples/: frozen-lake-rl.hs  linear-regression-autograd.hs  linear-regression-optimizer.hs  playground.hs
ml-with-haskell/lib/: Grid.hs
ml-with-haskell/lib/Control/Monad/RevState/: Instances.hs
ml-with-haskell/lib/RL/: Agent.hs
ml-with-haskell/lib/RL/Environments/: Snake.hs
ml-with-haskell/lib/Reflex/: Random.hs
tests/RL/Environments/: FrozenLakeSpec.hs
