cabal-version:       3.0
name:                ml-with-haskell
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             MIT
license-file:        LICENSE
author:              The Hasktorch Team
maintainer:          hasktorch@gmail.com
copyright:           2020 The Hasktorch Team
category:            Tensors, Machine Learning, AI
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 9.6.5

common base
  ghc-options: -Wall -Wextra -Wno-unrecognised-pragmas -Wno-orphans
  default-language: GHC2021
  default-extensions:
    DataKinds
    TypeFamilies
    FunctionalDependencies
    OverloadedRecordDot
    DuplicateRecordFields
    RecordWildCards
    NoStarIsType
    LambdaCase
    MultiWayIf
    BlockArguments
    RecursiveDo
  build-depends:
      base >= 4.18 && < 5
    , hasktorch >= 0.2 && < 0.3
    , mtl
    , libtorch-ffi
    , optparse-applicative
    , vector
    , vector-sized
    , random
    , containers
    , finite-typelits
    , lens
    , transformers
    , tardis
    , rev-state
    , reflex
    , reflex-vty
    , witherable
    , vty
    , text
    , patch
    , these
    , time
    , unbounded-delays
    
common binary-base
  import: base
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: ml-with-haskell

library
  import: base
  exposed-modules:
    Control.Monad.RevState.Instances
    Control.Monad.State.Instances
    Control.Monad.Tardis.Instances
    RL.Agent
    RL.Environments.FrozenLake
    RL.Environments.Snake
    RL.Agents.WASD
    Torch.Typed.Extra
    CommonArgs
    Reflex.Vty.Utils
    Reflex.Utils
    Reflex.Random
    Grid
  hs-source-dirs: lib

executable linear-regression-basic
  import: binary-base
  main-is: linear-regression-basic.hs
  hs-source-dirs: examples

executable linear-regression-autograd
  import: binary-base
  main-is: linear-regression-autograd.hs
  hs-source-dirs: examples

executable linear-regression-optimizer
  import: binary-base
  main-is: linear-regression-optimizer.hs
  hs-source-dirs: examples

executable frozen-lake-rl
  import: binary-base
  main-is: frozen-lake-rl.hs
  hs-source-dirs: examples

executable snake-rl
  import: binary-base
  main-is: snake-rl.hs
  hs-source-dirs: examples

executable playground
  import: binary-base
  main-is: playground.hs
  hs-source-dirs: examples

test-suite spec
  import: base
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: tests
  build-tool-depends:
  build-depends:
    , ml-with-haskell
    , hspec
    , hspec-discover
  other-modules:
    RL.Environments.FrozenLakeSpec

